Working on the treeView behavior and the ShellViewModel.

--- a/Solution/App/App.csproj
+++ b/Solution/App/App.csproj
@@ -98,11 +98,15 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Behaviors\TreeViewBehavior.cs" />
     <Compile Include="Infrastructure\BootstrapperBase.cs" />
     <Compile Include="Infrastructure\CaliburnBootstrapper.cs" />
     <Compile Include="Infrastructure\UnityBootstrapper.cs" />
     <Compile Include="Infrastructure\UWPBootstrapper.cs" />
+    <Compile Include="Models\Contracts\ITreeItemModel.cs" />
+    <Compile Include="Models\TreeItemModel.cs" />
     <Compile Include="ViewModels\Contracts\IShellViewModel.cs" />
+    <Compile Include="ViewModels\Contracts\ITreeViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
