--- a/Solution/App/project.json
+++ b/Solution/App/project.json
@@ -7,7 +7,8 @@
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Rx-Main": "2.2.5",
-    "Unity": "4.0.1"
+    "Unity": "4.0.1",
+    "WinRTXamlToolkit.UWP": "1.9.4"
   },
   "frameworks": {
     "uap10.0": {}
