--- a/Solution/App/App.csproj
+++ b/Solution/App/App.csproj
@@ -89,9 +89,6 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <Content Include="ApplicationInsights.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -104,7 +101,11 @@
     <Compile Include="Infrastructure\UnityBootstrapper.cs" />
     <Compile Include="Infrastructure\UWPBootstrapper.cs" />
     <Compile Include="Models\Contracts\ITreeItemModel.cs" />
+    <Compile Include="Models\Contracts\IListViewModel.cs" />
+    <Compile Include="Models\ListViewModel.cs" />
     <Compile Include="Models\TreeItemModel.cs" />
+    <Compile Include="Services\Contracts\IOpenFolderService.cs" />
+    <Compile Include="Services\OpenFolderService.cs" />
     <Compile Include="ViewModels\Contracts\IShellViewModel.cs" />
     <Compile Include="ViewModels\Contracts\ITreeViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
