--- a/Solution/App/project.json
+++ b/Solution/App/project.json
@@ -6,6 +6,7 @@
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "ReactiveProperty": "2.4.2",
     "Rx-Main": "2.2.5",
     "Unity": "4.0.1",
     "WinRTXamlToolkit.UWP": "1.9.4"
