Can display parts of the regex with color using a RichTextBlock.

--- a/Solution/App/App.csproj
+++ b/Solution/App/App.csproj
@@ -95,6 +95,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Behaviors\RegexColorBehavior.cs" />
     <Compile Include="Behaviors\TreeViewBehavior.cs" />
     <Compile Include="Converters\FuturResultConverter.cs" />
     <Compile Include="Extensions\PropertyChangedEventArgsExtension.cs" />
